--- a/polisa-app/polisa-dao/pom.xml
+++ b/polisa-app/polisa-dao/pom.xml
@@ -22,5 +22,20 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.hsqldb</groupId>
+    	<artifactId>hsqldb</artifactId>
+    	<version>2.4.0</version>
+	</dependency>
+    <dependency>
+    	<groupId>pl.atena.akademia.polisa</groupId>
+    	<artifactId>polisa-core</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>pl.atena.akademia.polisa</groupId>
+    	<artifactId>polisa-domain</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
